codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__responses_utility_model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 5124
expression: popup
---
  Select Responses Utility Model
  Fallback used by Responses-only internal tasks when the general utility/sub-

› 1. Inherit (gpt-5.1-codex-mini) (current)  Use the general utility/sub-agent
                                             model when it is Responses-
                                             compatible; otherwise fall back
                                             to the built-in default.
  2. gpt-5.1-codex-mini                      gpt-5.1-codex-mini description
  3. openai/o4-mini                          openai/o4-mini description

  Press enter to confirm or esc to go back
