codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_pdf_update_help.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4238
expression: rendered
---
• Usage: /pdf-update <pdf_path> -- <prompt>

Process PDF: export pages to images and apply image transformations.

Setup required:
1. pip install pdf2image Pillow python-pptx
2. brew install poppler (macOS) or apt install poppler-utils (Linux)

Example:
/pdf-update ~/Documents/report.pdf -- Convert to oil painting style
