codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_pdf_update_start_message.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4269
expression: rendered
---
• [PDF Update] Starting PDF processing...
Input: <PDF_PATH>
Output: <OUTPUT_DIR>
Prompt: remove the background
