codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_ralph_loop_help.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Ralph Loop - Iterative Self-Correction Loop

Usage:
  /ralph-loop
  /ralph-loop [prompt] [options]
  /ralph-loop --help
  /cancel-ralph

Options:
  -n, --max-iterations, --max <N>  Maximum iterations (default: 50, 0 = unlimited)
  -c, --completion-promise <STR>   Completion promise text (default: "COMPLETE")
  -p, --prompt <TEXT>              Prompt to repeat each iteration
  -d, --delay <SECONDS>            Delay before retry on error (default: 300)

Examples:
  /ralph-loop "Build the API. Output <promise>COMPLETE</promise> when done." -n 30
  /ralph-loop --max 30 --completion-promise DONE --prompt "Fix all tests"
  /ralph-loop -p "Fix all tests" -c DONE -n 10
  /ralph-loop "Implement feature X" -n 20 -c FINISHED -d 60

How it works:
  1. The prompt is submitted to the agent
  2. When the agent finishes, the system checks for <promise>COMPLETE</promise>
  3. If not found and iterations remain, the same prompt is re-submitted
  4. The agent sees its previous work (files, git history) and continues
  5. On error, waits --delay seconds before retrying
  6. Use /cancel-ralph to stop the loop at any time
