codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__team_profile_selection_popup_prefers_vouched_profile.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Team Profile
  One-click presets for leader model plus utility/sub-agent and memories routi

  1. Leader-Quality             gpt-5.3-codex leads; Claude Sonnet handles
                                default sub-agents; Claude Opus handles deeper
                                consolidation.
                                vouch: no leader verdicts recorded yet
                                strengths: Best overall leader quality for
                                complex coding threads; Claude Sonnet provides
                                fast and long-context sub-agent coverage;
                                Claude Opus strengthens deep memory
                                consolidation
                                tradeoffs: Higher token cost than cost-save
                                profile; Lower throughput than the fast
                                profile
                                evidence: Heuristic profile from recent team
                                practice; vouch scoreboard integration is
                                next.
                                leader_model=gpt-5.3-codex, model_sub=claude-
                                sonnet-4-6, model_sub_responses=gpt-5.2-codex,
                                memories.phase_1_model=claude-sonnet-4-6,
                                memories.phase_2_model=claude-opus-4-6
  2. Leader-Fast (Recommended)  gpt-5.3-codex-spark|[pro] leads for fast
                                iteration; Claude Sonnet stays the default
                                sub-agent and memory worker.
                                vouch: global +7 / -2 (net +5) | note: fast
                                and stable
                                strengths: Fastest end-to-end iteration in
                                this profile set; Keeps Claude Sonnet as
                                large-context default sub-agent; Good fit for
                                high-frequency exploration loops
                                tradeoffs: May lose depth versus quality/deep-
                                reasoning profiles; Not the lowest-cost
                                steady-state profile
                                evidence: Heuristic profile from observed
                                latency behavior; vouch scoreboard integration
                                is next.
                                leader_model=gpt-5.3-codex-spark|[pro],
                                model_sub=claude-sonnet-4-6,
                                model_sub_responses=gpt-5.3-codex-spark|[pro],
                                memories.phase_1_model=claude-sonnet-4-6,
                                memories.phase_2_model=claude-sonnet-4-6
  3. Leader-Cost-Save           gpt-5.2-codex leads for lower cost; Claude
                                Sonnet remains default for broad-context sub-
                                agent tasks.
                                vouch: no leader verdicts recorded yet
                                strengths: Lowest expected leader cost among
                                codex leader options; Retains Claude Sonnet
                                for broad-context delegation; Stable default
                                for long-running budget-sensitive sessions
                                tradeoffs: Lower peak reasoning depth than
                                quality/deep profiles; Slower convergence on
                                the hardest architecture tasks
                                evidence: Heuristic profile from budget-
                                focused usage; vouch scoreboard integration is
                                next.
                                leader_model=gpt-5.2-codex, model_sub=claude-
                                sonnet-4-6, model_sub_responses=gpt-5.2-codex,
                                memories.phase_1_model=claude-sonnet-4-6,
                                memories.phase_2_model=claude-sonnet-4-6
› 4. Deep-Reasoning (current)   gpt-5.3-codex leads while Claude Opus is
                                prioritized for heavyweight delegation and
                                consolidation.
                                vouch: no leader verdicts recorded yet
                                strengths: Best depth for hard root-cause and
                                architecture tasks; Prioritizes Claude Opus
                                for difficult sub-agent work; Strongest
                                profile for high-complexity memory
                                consolidation
                                tradeoffs: Highest latency profile; Highest
                                expected cost profile
                                evidence: Heuristic profile from complexity-
                                first workflows; vouch scoreboard integration
                                is next.
                                leader_model=gpt-5.3-codex, model_sub=claude-
                                opus-4-6, model_sub_responses=gpt-5.3-codex,
                                memories.phase_1_model=claude-sonnet-4-6,
                                memories.phase_2_model=claude-opus-4-6

  Press enter to confirm or esc to go back
